testing changes to workflow

--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -2,9 +2,8 @@ name: Push Docker Image to Docker Hub
 
 on:
   push:
-    branches:  
-        -main 
-        -workflow
+    branches: [ main ] 
+ 
 
 jobs:
   push_to_registry:
