--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -25,4 +25,4 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: robertdolibog/app_docker:clickedclick
+        tags: robertdolibog/app_docker:clickedclick ./app
