--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,28 +1,30 @@
-name: Push Docker Image to Docker Hub
+name: Build and Push Docker Image
 
 on:
   push:
-    branches:  
-        -main 
-        -workflow
+    branches:
+      - main
+      - workflow # for testing
+
+env:
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKER_HUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-
+  build-and-push:
+    runs-on: ubuntu-22.04
     steps:
-    - name: Check Out Repo
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build Docker image
+        run: docker build -t stephanlindauer/clickediclick:$GITHUB_SHA ./app
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: robertdolibog/app_docker:clickedclick ./app
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKER_HUB_USERNAME }}
+          password: ${{ env.DOCKER_HUB_PASSWORD }}
+
+      - name: Push Docker image
+        run: docker push stephanlindauer/clickediclick:$GITHUB_SHA
