--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -6,25 +6,22 @@ on:
       - main
       - workflow # for testing
 
-env:
-  DOCKER_HUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKER_HUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-
 jobs:
   build-and-push:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t stephanlindauer/clickediclick:$GITHUB_SHA ./app
+        run: docker build -t robertdolibog/app_docker:$GITHUB_SHA ./app
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ env.DOCKER_HUB_USERNAME }}
-          password: ${{ env.DOCKER_HUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Push Docker image
-        run: docker push stephanlindauer/clickediclick:$GITHUB_SHA
+        run: docker push robertdolibog/app_docker:$GITHUB_SHA
